# whisper-voice-input

./: settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/kotlin/com/pauvepe/whispervoice/: App.kt  AudioRecorder.kt  InputAccessibilityService.kt  MainActivity.kt  OverlayService.kt  UpdateManager.kt  WhisperEngine.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_mic_large.xml  mic_background.xml
app/src/main/res/layout/: activity_main.xml  overlay_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml
